# Bella

./: .gitignore  Cargo.toml  TODO.md  makefile
.cargo/: config.toml
config/: animal_species_carnivores.yaml  animals.toml  animals.yaml  basic.toml  data_collection.toml  data_collection.yaml  environment.toml  environment.yaml  organisms.toml  organisms.yaml  plants.toml  plants.yaml  terrain.toml  terrain.yaml  time.toml  time.yaml  window.yaml
src/: bella.rs  config.rs  layer.rs  main.rs  organism.rs  terrain.rs  time.rs  ui.rs
src/bella/: config.rs  data_collection.rs  distribution.rs  environment.rs  hex.rs  inspector.rs  organism.rs  pause.rs  plots.rs  restart.rs  state.rs  system_set.rs  terrain.rs  time.rs  ui.rs  ui_facade.rs  window.rs
src/bella/organism/: animal.rs  carcass.rs  gene.rs  plant.rs
src/bella/organism/animal/: animal_ai.rs  gizmos.rs  mobile.rs  visual.rs
src/bella/terrain/: biome.rs  terrain_overlay_state.rs  thermal_conductor.rs  tile.rs
src/bella/ui/: camera.rs  window.rs
src/organism/: creature.rs  plant.rs
src/terrain/: biome.rs  thermal.rs  visualization.rs
src/ui/: camera.rs  window.rs
