[package]
name = "bella"
version = "0.1.0"
edition = "2021"
authors = ["Julian Górski"]
license = "MIT OR Apache-2.0"



[dependencies]
bevy = { version = "0.15.0" }
# we remove trace_tracy beacause it doesn't work with WASM. just use cargo run --features bevy/trace_tracy
# bevy = { version = "0.15.0", features = ["trace_tracy"] }
bevy-inspector-egui = { version = "0.28.0" }
bevy_egui = "0.31.1"

rand = "0.8.5"
itertools = "0.13.0"
config = { version = "0.15.4", features = ["yaml"] }
noise = { version = "0.9.0", features = ["images"] }
serde = { version = "1.0.217", features = ["derive"] }
rand_distr = "0.4.3"
rmp-serde = "1.3.0"



[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
# opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
# strip = "debuginfo"
# codegen-units = 1
# lto = "thin"
# lto = "fat"