[package]
name = "bella"
version = "0.1.0"
edition = "2021"
authors = ["Julian Górski"]
license = "MIT OR Apache-2.0"



[dependencies]
# bevy = { version = "0.15.0" }
bevy = { version = "0.15.2", default-features = false, features = [
    # those are needed in WINDOWED and HEADLESS
    # "bevy_color", "bevy_core_pipeline", "default_font", "multi_threaded", 

    # those are needed in WINDOWED
    # "bevy_gizmos",  "bevy_mesh_picking_backend", "bevy_picking", "bevy_render", "bevy_text", "bevy_window", "bevy_winit", "webgl2",

    # those idk
    # "bevy_pbr", "bevy_scene", "bevy_state", "bevy_ui", "bevy_ui_picking_backend", "sysinfo_plugin", "custom_cursor"

    
"x11",
"webgl2",
"tonemapping_luts", # rendering stuff
"sysinfo_plugin",
"multi_threaded",
"default_font",
"bevy_winit",
"bevy_window",
"bevy_ui_picking_backend",
"bevy_ui",
"bevy_text",
"bevy_state",
"bevy_render",
"bevy_picking",
"bevy_pbr",
"bevy_mesh_picking_backend",
"bevy_gizmos",
"bevy_core_pipeline",
"bevy_color",

# "smaa_luts",
# "vorbis",
# "png",
# "ktx2",
# "hdr",
# "custom_cursor",
# "bevy_sprite_picking_backend",
# "bevy_sprite",
# "bevy_scene",
# "bevy_gltf",
# "bevy_gilrs",
# "bevy_audio",
# "bevy_asset",
# "bevy_animation",
# "animation",
# "zstd",
]}

# we remove trace_tracy beacause it doesn't work with WASM. just use cargo run --features bevy/trace_tracy
# bevy = { version = "0.15.0", features = ["trace_tracy"] }
bevy-inspector-egui = { version = "0.28.0" }
bevy_egui = "0.31.1"

rand = "0.8.5"
itertools = "0.13.0"
config = { version = "0.15.4", features = ["yaml"] }
noise = { version = "0.9.0", features = ["images"] }
serde = { version = "1.0.217", features = ["derive"] }
rand_distr = "0.4.3"
rmp-serde = "1.3.0"



[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
# opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
# strip = "debuginfo"
# codegen-units = 1
# lto = "thin"
# lto = "fat"