[package]
name = "bella"
version = "0.1.0"
edition = "2021"
authors = ["Julian Górski"]
license = "MIT OR Apache-2.0"


[features]
# wasm, windowed
bella_web = [
    "bella_windowed",
    "bevy/webgl2",
]

# native, windowed
bella_windowed = [
    "bella_base",
    # we don't use trace_tracy beacause it doesn't work with WASM. just use cargo run --features bevy/trace_tracy

    "bevy-inspector-egui",
    "bevy_egui",

    "bevy/bevy_window",
    "bevy/bevy_core_pipeline",
    "bevy/sysinfo_plugin",
    "bevy/default_font",
    "bevy/bevy_ui",
    "bevy/bevy_text",
    "bevy/bevy_render",
    "bevy/bevy_ui_picking_backend",
    "bevy/bevy_mesh_picking_backend",
    "bevy/bevy_gizmos",
    "bevy/tonemapping_luts",
]

# native, headless
bella_headless = [
    "bella_base"
]

# base for other features
bella_base = [
    # we want those
    "bevy/multi_threaded",
    "bevy/bevy_state",
    # needed for code to work without changing too much
    "bevy/bevy_pbr",
    "bevy/bevy_color",
    "bevy/bevy_picking",
    # idk why they are needed, I think they are just window things?
    "bevy/bevy_winit",
    "bevy/x11",
]


[dependencies]
bevy = { version = "0.15.2", default-features = false }

bevy-inspector-egui = { version = "0.28.0", optional = true}
bevy_egui = {version = "0.31.1", optional = true}

rand = "0.8.5"
itertools = "0.13.0"
config = { version = "0.15.4", features = ["yaml"] }
noise = { version = "0.9.0", features = ["images"] }
serde = { version = "1.0.217", features = ["derive"] }
rand_distr = "0.4.3"
rmp-serde = "1.3.0"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
strip = "debuginfo"
lto = true
codegen-units = 1
panic = "abort"